new flask app - new features like field for requests and windows automatic installation

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ diagrama.png
 api_keys.txt
 prompts/prompt_literature.txt
 prompts/random.txt
+prompts/5_results_propose.txt
+prompts/4_focus_theory_problem.txt
