--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-PyMuPDF
-#"openai<1" for old openai functions
-openai
-flask
-Werkzeug
-python-docx
-pypandoc
-black
-pyinstaller>=6.0.0
+altgraph==0.17.4
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+Flask==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+pefile==2023.2.7
+pyinstaller==6.15.0
+pyinstaller-hooks-contrib==2025.8
+PyMuPDF==1.26.3
+pywin32-ctypes==0.2.3
+setuptools==80.9.0
+Werkzeug==3.1.3
+python-docx==1.2.0
+openai>=1.0.0
+pypandoc>=1.13
+black>=23.0.0
